--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        }
         .image {
             width: 300px;
             border-radius: 10px;
@@ -16,10 +21,18 @@
             box-shadow: 0px 0px 20px rgb(255, 31, 169);
             transition: all 1s ease-in-out;
         }
+        .heading {
+            display: inline-block;
+        }
+        .family {
+            vertical-align: super;
+            font-weight: 100;
+            color: red;
+        }
     </style>
 </head>
 <body style="text-align: center; color: rgb(31, 248, 255);">
-    <h1>RANGAIAHGARI</h1>
+    <h1 class="heading">RANGAIAHGARI <sup class="family">family</sup></h1>
     <h2>My name is Sneethika</h2>
     <h2>My father is Thirupathi Reddy</h2>
     <h2>My mother is Sujatha</h2>
