--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <body style="text-align: center; color: rgb(31, 248, 255);">
     <h1 class="heading">RANGAIAHGARI <sup class="family">family</sup></h1>
     <h2>My name is Sneethika</h2>
-    <h2>My father is Thirupathi Reddy</h2>
-    <h2>My mother is Sujatha</h2>
-    <h2>My sister is Soumya</h2>
+    <h2>My father name is Thirupathi Reddy</h2>
+    <h2>My mother name is Sujatha</h2>
+    <h2>My sister name is Soumya</h2>
     <img src="family.jpeg" alt="image" class="image">
 </body>
 </html>
